New in 1.6:

* Merged debian packaging files.
* Using same version number for all libraries.

New in 1.5:

* Removed signal based preemption code.
* Removed all access to global variables from assembly code.
* Moved process.ss to process.S, to use correct compilation flags.
* Ported to NetBSD-mips.
* Fixed shared library problems for mips and sparc (and arm?).
* Using fd_set for IOMGR_Select.
* Fixed broken handling of the select timeout.

New in 1.4:

* Ported to Linux-arm (Jason Flinn).
* Ported to FreeBSD-alpha.
* Fixed unaligned access problems on 64-bit machines..
* Increased the IOMGR stacksize to 32KB to avoid stackoverflows.
* Avoid lock.h nameclashes with Coda on the list_head definition
  (_pt version only).

New in 1.3:

* Disabled building shared libraries by default, enabling it only for
  platforms that seem to work correctly (currently only i386).
* Updates for Solaris-i386 (from Phil Nelson).

New in 1.2:

* Phil Nelson fixed the compilation problems on Solaris.

New in 1.1:

* Fixed a bad stackbase on NetBSD/FreeBSD platforms.
* Fixed a locking bug in lock_pt.c.
* Using pthread_attr_setdetachstate in lwp_pt.c instead of modifying the attr
  struct directly.
* Improved cross-compiling with cygwin32 and djgpp.
* Added a script that might produce a useable ports/packages descriptions.
* Wrote a bit in the INSTALL document.

New in 1.0:

* Extracted LWP out of the main Coda source tree.
* Using an automake/autoconf/libtool build environment.
* Creating shared libraries.
* Added pthreaded version of the lwp library.
* Fixed some bugs in the included test programs.
