@@ -4,17 +4,17 @@ Version: @VERSION@
 Release: 1
 Source: ftp://ftp.coda.cs.cmu.edu/pub/coda/src/@PACKAGE@-@VERSION@.tar.gz
 Copyright: LGPL
-BuildRoot: /usr/src/redhat/BUILD/@PACKAGE@-@VERSION@/Root
+BuildRoot: %{_topdir}/BUILD/@PACKAGE@-@VERSION@/Root
 Group: Development/Libraries
 %description
 The LWP userspace threads library. The LWP threads library is used by the Coda
 distributed filesystem, RVM (a persistent VM library), and RPC2/SFTP (remote
 procedure call library)
 
-%package dev
+%package devel
 Summary: LWP thread library development files
 Group: Development/Libraries
-%description dev
+%description devel
 Headers and static libraries for developing programs using the LWP userspace
 threads library. The LWP threads library is used by the Coda distributed
 filesystem, RVM (a persistent VM library), and RPC2/SFTP (a remote procedure
@@ -44,9 +44,11 @@ rm -rf $RPM_BUILD_ROOT
 /sbin/ldconfig
 
 %files
+%attr(-,root,root)
 /usr/lib/liblwp.so.$(LINUX_VERSION)
 
-%files dev
+%files devel
+%attr(-,root,root)
 /usr/lib/liblwp.la
 /usr/lib/liblwp.a
 /usr/lib/liblwp.so
